--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1374,6 +1374,7 @@ en:
       abandoned: Abandoned
       at: at
       bike_photo: "%{bike_type} photo"
+      by: by
       change_the_bike_sticker_linked_to: Change the bike it links to
       color_may_not_match: Color may not match!
       componentcmodel_name: "%{componentcmodel_name}"
@@ -1388,11 +1389,13 @@ en:
       distinguishing_features: Distinguishing features
       frame_material: Frame Material
       frame_size: Frame size
+      from: from
       front: Front
       front_rear: Front & rear
       front_wheel_diameter: Front wheel diameter
       handlebar_type: Handlebar type
       hidden_by_owner: HIDDEN by owner
+      impounded_at: Impounded
       is_this_linked_to_incorrect_bike: Is this sticker linked to the incorrect bike?
       is_this_your_bike_send_proof_of_ownership: >-
         Is this your bike? Send proof of ownership (such as the bike's serial number
@@ -1425,11 +1428,8 @@ en:
       stolen: Stolen
       switch_to_new_bike_id: Switch to a new bike ID
       theft_details: "%{bike_abandoned} Details"
-      update: Update
       this_was_impounded: This %{bike_type} was impounded
-      impounded_at: Impounded at
-      by: by
-      from: from
+      update: Update
       view_users_other_registrations: View user's other registrations
       wheel_diameter: Wheel diameter
       where_did_you_see_this_bike: >-
@@ -4059,6 +4059,12 @@ en:
     precision:
       format:
         delimiter: ''
+  org_public:
+    impounded_bikes:
+      index:
+        search_bike_descriptions: Search bike descriptions
+        search_for_serial_number: Search for serial number
+        search_owner_email: Search owner email
   organization_invitations:
     not_available:
       contact_us: Contact us
@@ -4627,12 +4633,6 @@ en:
         user: user
         you_have_a_permitted_domain: You have a permitted domain
         you_have_invited_html: 'You have invited: <strong>%{users_count}</strong>'
-  org_public:
-    impounded_bikes:
-      index:
-        search_bike_descriptions: Search bike descriptions
-        search_for_serial_number: Search for serial number
-        search_owner_email: Search owner email
   organized_mailer:
     custom_message:
       subject: "%{org_name} - the location of your %{mnfg_name}"
